# myrepo

./: Back-to-basics.md  Sorting Algorithms.md
Concepts_c++20/: 1.cpp
Design_patterns/Adapter design pattern/: Adapter.cpp
Design_patterns/factory_designpattern/: electrical.cpp  electrical.h  employee.h  humanresourcer.h  main.cpp  medical.cpp  medical.h  transportation.cpp  transportation.h
Design_patterns/singleton_designpattern/: main.cpp  singleton.cpp  singleton.h
IPC/TCP-IP/: client.cpp  server.cpp
OOPS/Class/: Object.cpp  constructor2.cpp  constructors.cpp  friend.cpp  student_constructor.cpp  this_pointer.cpp
OOPS/Inheritance/: constructor_delegation.cpp  heirarchical_inheritance.cpp  multilevel_inheritance.cpp  multiple_Inheritance.cpp  single_Inheritance.cpp
OOPS/Polymorphism/: Function_overriding.cpp  function_overloading.cpp  operator_overloading.cpp  virtual_destructor.cpp  virtual_function.cpp
QT_QML/: Qt3dmesh.qml  listsnap.qml
QT_QML/BluetoothConnect/: CMakeLists.txt  Main.qml  bluetoothmanager.cpp  bluetoothmanager.h  main.cpp
QT_QML/BluetoothScanner/: CMakeLists.txt  Main.qml  bluetoothscanner.cpp  bluetoothscanner.h  main.cpp
QT_QML/draganddrop/: CMakeLists.txt  Main.qml  main.cpp
Qnx-project/: client.c  imp2.c  project.c
STL/Algorithms/: all_any_none_of.cpp  count.cpp  equal.cpp  fill_fill_n.cpp  find_if_not.cpp  for_each.cpp  new 1.txt  new 2.txt  new 3.txt  remove.cpp  reverse.cpp  rotate.cpp  sample.cpp  shuffle.cpp  sort_operation.cpp  swap.cpp  unique.cpp
STL/Containers/: std__pair.cpp
STL/Functors/: functionobjects.cpp  functor.cpp  (+1 more)
STL_FUNCTIONS/: a.cpp
Smart_pointers/: autoptr.cpp  sharedptr.cpp  uniqeptr.cpp
Type_casting__/: const_cast__.cpp  dynamic_cast__.cpp  reinterpret_cast__.cpp  static_cast__.cpp
Type_traits/: is_class.cpp  is_polymorphic.cpp  is_same.cpp
debus_cpp/: client.cpp  server.cpp
linked_list/: 1_list_with_iterators.cpp  circular_doubly_linkedlist.cpp  circular_singly_linked_list.cpp  double_linked_list.cpp  flames.cpp  queue_using_list.cpp  single_linked_list.cpp  stack_usig_linkedlist.cpp
recursion/: conversions.cpp
samples/: ANSI_C_codes.cpp  variadic_functions.c
sorting/: bubble_sort_testing.cpp  insertion_sort_testing.cpp  selection_sort_testing.cpp  sorting_deque_and_vector.cpp  worst_sorting_method.cpp
trees/: btree.cpp
variadic_templates/: custom_tuple_creation.cpp  nested_templates.cpp  variadic-function.cpp
(+45 files in other folders)
